# advent-of-code-16

./: .gitignore  README.html  README.md  advent01.hs  advent02.hs  advent03.hs  advent04.hs  advent05.hs  advent06.hs  advent07.hs  advent08.hs  advent09.hs  advent10.hs  advent11.hs  advent11a.hs  advent11a.prof.old  advent11h.hs  advent11p.hs  advent11p.prof.old  advent12.hs  advent13.hs  advent14.hs  advent14c.hs  advent14parallel.hs  advent15.hs  advent15l.hs  advent16.hs  advent16i.hs  advent17.hs  advent18.hs  advent18f.hs  advent19.hs  advent20.hs  advent21.hs  adventofcode16.cabal  day01.html  day02.html  day03.html  day04.html  day05.html  (+21 more)
adventofcode16/: adventofcode16.cabal  stack.yaml
adventofcode16/app/: advent05.hs  advent06-old.hs  advent06.hs  advent07.hs  advent08.hs  advent09.hs  advent10.hs  advent11.hs  advent13.hs  advent14.hs  advent15.hs  advent18.hs  advent18f.hs  advent20.hs  advent21.hs  advent22library.hs  advent23.hs
adventofcode1601/: adventofcode1601.cabal
adventofcode1601/app/: advent01.hs
adventofcode1602/: adventofcode1602.cabal
adventofcode1602/app/: Main.hs
adventofcode1603/: adventofcode1603.cabal
adventofcode1604/: adventofcode1604.cabal
adventofcode1605/: adventofcode1605.cabal
adventofcode1606/: adventofcode1606.cabal
adventofcode1607/: adventofcode1607.cabal
adventofcode1608/: adventofcode1608.cabal
adventofcode1609/: adventofcode1609.cabal
adventofcode1610/: adventofcode1610.cabal
adventofcode1611/: adventofcode1611.cabal
adventofcode1611/app/: advent11h.hs  advent11p.hs  advent11ps.hs  advent11psm.hs  advent11psmh.hs
adventofcode1612/: adventofcode1612.cabal
adventofcode1613/: adventofcode1613.cabal
adventofcode1614/: adventofcode1614.cabal
adventofcode1614/app/: advent14c.hs
adventofcode1615/: adventofcode1615.cabal
adventofcode1616/: adventofcode1616.cabal
adventofcode1617/: adventofcode1617.cabal
adventofcode1618/: adventofcode1618.cabal
adventofcode1619/: adventofcode1619.cabal
adventofcode1619/app/: advent19.hs
adventofcode1620/: adventofcode1620.cabal
adventofcode1621/: adventofcode1621.cabal
adventofcode1622/: adventofcode1622.cabal
adventofcode1622/app/: advent22psm.hs  advent22search.hs  advent22showgrid.hs
adventofcode1623/: adventofcode1623.cabal
adventofcode1624/: adventofcode1624.cabal
adventofcode1624/app/: advent24.hs
adventofcode1625/: adventofcode1625.cabal
adventofcode1625/app/: advent25.hs
app/: advent03.hs  advent04.hs  advent11a.hs  advent12.hs  advent14parallel.hs  advent15l.hs  advent16.hs  advent16i.hs  advent17.hs  advent22.hs
