name:                adventofcode16
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/neilnjae/adventofcode16#readme
license:             BSD3
license-file:        LICENSE
author:              Neil Smith
maintainer:          noone@njae.me.uk
copyright:           2016 Neil Smith
category:            None
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable advent01
  hs-source-dirs:      app
  main-is:             advent01.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , split
  default-language:    Haskell2010

executable advent02
  hs-source-dirs:      app
  main-is:             advent02.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , array
  default-language:    Haskell2010

executable advent03
  hs-source-dirs:      app
  main-is:             advent03.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , split
  default-language:    Haskell2010

executable advent04
  hs-source-dirs:      app
  main-is:             advent04.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , split
                     , containers
  default-language:    Haskell2010

executable advent05
  hs-source-dirs:      app
  main-is:             advent05.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , containers
                     , MissingH
  default-language:    Haskell2010

executable advent06
  hs-source-dirs:      app
  main-is:             advent06.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
  default-language:    Haskell2010

executable advent07
  hs-source-dirs:      app
  main-is:             advent07.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , parsec
  default-language:    Haskell2010

executable advent08
  hs-source-dirs:      app
  main-is:             advent08.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , array
                     , parsec
  default-language:    Haskell2010

executable advent09
  hs-source-dirs:      app
  main-is:             advent09.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , split
  default-language:    Haskell2010

executable advent10
  hs-source-dirs:      app
  main-is:             advent10.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , parsec
                     , text
                     , mtl
  default-language:    Haskell2010

executable advent11
  hs-source-dirs:      app
  main-is:             advent11.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
  default-language:    Haskell2010

executable advent11a
  hs-source-dirs:      app
  main-is:             advent11a.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
  default-language:    Haskell2010

executable advent11h
  hs-source-dirs:      app
  main-is:             advent11h.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
  default-language:    Haskell2010

executable advent11p
  hs-source-dirs:      app
  main-is:             advent11p.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , pqueue
  default-language:    Haskell2010

executable advent12
  hs-source-dirs:      app
  main-is:             advent12.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , parsec
                     , parsec-numbers
                     , mtl
  default-language:    Haskell2010

executable advent13
  hs-source-dirs:      app
  main-is:             advent13.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , MissingH
  default-language:    Haskell2010

executable advent14
  hs-source-dirs:      app
  main-is:             advent14.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , MissingH
  default-language:    Haskell2010

executable advent14c
  hs-source-dirs:      app
  main-is:             advent14c.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , bytestring
                     , cryptonite
  default-language:    Haskell2010

executable advent14parallel
  hs-source-dirs:      app
  main-is:             advent14parallel.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , parallel
                     , bytestring
                     , cryptonite
  default-language:    Haskell2010

executable advent15
  hs-source-dirs:      app
  main-is:             advent15.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , parsec
                     , parsec-numbers
  default-language:    Haskell2010

executable advent15l
  hs-source-dirs:      app
  main-is:             advent15l.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , parsec
                     , parsec-numbers
  default-language:    Haskell2010

executable advent16
  hs-source-dirs:      app
  main-is:             advent16.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
  default-language:    Haskell2010

executable advent16i
  hs-source-dirs:      app
  main-is:             advent16i.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
  default-language:    Haskell2010

executable advent17
  hs-source-dirs:      app
  main-is:             advent17.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , bytestring
                     , cryptonite
  default-language:    Haskell2010

executable advent18
  hs-source-dirs:      app
  main-is:             advent18.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
  default-language:    Haskell2010

executable advent18f
  hs-source-dirs:      app
  main-is:             advent18f.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
  default-language:    Haskell2010

executable advent19
  hs-source-dirs:      app
  main-is:             advent19.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , containers
  default-language:    Haskell2010

executable advent20
  hs-source-dirs:      app
  main-is:             advent20.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , parsec
                     , parsec-numbers
  default-language:    Haskell2010

executable advent21
  hs-source-dirs:      app
  main-is:             advent21.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , parsec
                     , parsec-numbers
                     , mtl
  default-language:    Haskell2010

executable advent22
  hs-source-dirs:      app
  main-is:             advent22.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , parsec
                     , parsec-numbers
  default-language:    Haskell2010

executable advent22search
  hs-source-dirs:      app
  main-is:             advent22search.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , parsec
                     , parsec-numbers
  default-language:    Haskell2010

executable advent22showgrid
  hs-source-dirs:      app
  main-is:             advent22showgrid.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , parsec
                     , parsec-numbers
  default-language:    Haskell2010

executable advent22library
  hs-source-dirs:      app
  main-is:             advent22library.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , parsec
                     , parsec-numbers
                     , containers
                     , astar
                     , unordered-containers
                     , hashable
  default-language:    Haskell2010


executable adventofcode16-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
  default-language:    Haskell2010

test-suite adventofcode16-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , adventofcode16
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/neilnjae/adventofcode16
