name:                adventofcode1611
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://git.njae.me.uk/?p=advent-of-code-16.git;a=blob_plain;f=README.html
license:             BSD3
license-file:        LICENSE
author:              Neil Smith
maintainer:          noone@njae.me.uk
copyright:           2016 Neil Smith
category:            None
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable advent11
  hs-source-dirs:      app
  main-is:             advent11.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
  default-language:    Haskell2010

executable advent11a
  hs-source-dirs:      app
  main-is:             advent11a.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
  default-language:    Haskell2010

executable advent11h
  hs-source-dirs:      app
  main-is:             advent11h.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
  default-language:    Haskell2010

executable advent11p
  hs-source-dirs:      app
  main-is:             advent11p.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , pqueue
  default-language:    Haskell2010

executable advent11ps
  hs-source-dirs:      app
  main-is:             advent11ps.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode16
                     , pqueue
                     , hashable
                     , containers
                     , unordered-containers
  default-language:    Haskell2010

test-suite adventofcode1611-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , adventofcode1611
                     , adventofcode16
                     , split
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@git.njae.me.uk:advent-of-code-16
