name:                adventofcode1618
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://git.njae.me.uk/?p=advent-of-code-16.git;a=blob_plain;f=README.html
license:             BSD3
license-file:        LICENSE
author:              Neil Smith
maintainer:          noone@njae.me.uk
copyright:           2016 Neil Smith
category:            None
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable advent18
  hs-source-dirs:      app
  main-is:             advent18.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode1618
                     , adventofcode16
  default-language:    Haskell2010

test-suite adventofcode1618-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , adventofcode1618
                     , adventofcode16
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@git.njae.me.uk:advent-of-code-16
